feat: add kafka integration
